...
                android:padding="8dp"
                android:textSize="18dp"
                android:textColor="#000000"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/catalog_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:context="com.jbm.intactchallenge.MainActivity"
                tools:listitem="@layout/catalog_item"
...
                    android:layout_height="wrap_content"
                    android:text="@string/free_shipping"
                    android:gravity="center"
                    android:textColor="#5F9C89"/>

                <Button
                    android:id="@+id/checkout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/proceed_to_checkout"
                    android:backgroundTint="#EC3331"
...
