<resources>
    <string name="app_name">TASCH</string>
    <string name="your_wish_list">Your Wish List</string>
    <string name="product_catalog">Product Catalog</string>
    <string name="total">Total</string>
    <string name="sub_total">Sub-total</string>
    <string name="free_shipping">Free Shipping World Wide</string>
    <string name="proceed_to_checkout">Proceed to check out</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="rate_product">Rate the product</string>
    <string name="add_to_wishlist">Add to wish list</string>
    <string name="remove_to_wishlist">Remove from wish list</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_title">Are you sure you want to proceed to check out ?</string>
    <string name="currency">$</string>
</resources>